# rvx

./: .gitignore  CMakeLists.txt  CODE_STYLE.md  README.md  dev  dev.sh  fs.img  package.json
.run/: Debug Arvos.run.xml  arvos.run.xml  kernel.run.xml
kernel/: CMakeLists.txt  bio.c  bits.h  buf.h  clk.c  clk.h  console.c  d1.h  d1_clock.c  d1_gpio.c  d1_uart.c  date.h  defs.h  elf.h  entry.S  fcntl.h  file.h  fs.h  gpio.c  gpio.h  kernelvec.S  main.c  memlayout.h  printf.c  proc.c  proc.h  ramdisk.c  riscv.h  sleeplock.h  spinlock.h  stat.h  swtch.S  syscall.h  trampoline.S  trap.c  types.h  uart.c  uartinit.c  uartinit.h  vm.c
mkfs/: CMakeLists.txt  mkfs  mkfs.c
user/: CMakeLists.txt  cat.c  initcode.S  pyramid.c
